styles/style.css
/* ... */
/* lookbook (coming soon) */
.lookbook-wrapper {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  margin: 0 auto;
}

/* footer mobile */

footer {
  background-color: white;
  width: 100%;
  overflow: hidden;
  position: absolute;
  padding-bottom: 20px;
}

.footer-end {
  -webkit-transition: 0s;
  transition: 0s;
  position: absolute;
  width: 30px;
  padding-left: 50px;
  padding-top: 70px;
  visibility: hidden;
}

.footer-bot {
  -webkit-transition: 0s;
  transition: 0s;
  position: absolute;
  padding-left: 300px;
  padding-top: 70px;
  visibility: hidden;
}

.footer-top h1 {
  background-color: rgb(255, 255, 255);
  width: 100%;
  margin: 0;
  float: left;
  font-family: Compagnon-medium;
  font-size: 0px;
  letter-spacing: 5px;
  color: rgb(255, 255, 255);
  text-align: left;
  line-height: 30px;
  display: grid;
  padding: 20px 20px 20px 20px;
}

.footer-mid ul h3 {
  float: center;
  font-family: SourceHanSerifSCExtraLight;
  text-align: center;
  letter-spacing: 2px;
  color: rgb(0, 0, 0);
  line-height: 20px;
  font-size: 6px;
  margin: 0;
  padding: 0px 0px 0px 15px;
}

.footer-end ul h2 {
  position: relative;
  text-align: right;
  width: 100%;
  font-family: Wan;
  letter-spacing: 5px;
  color: black;
  float: center;
  line-height: 50px;
  font-size: 6px;
  margin: 0;
  padding: 0px 0px 0px 75px;
  text-transform: uppercase;

}

.footer-mid ul li {
  display: grid;
  list-style: none;
  float: left;
  height: 100px;
}

.footer-end ul li {
  display: grid;
  list-style: none;
  float: left;
  height: 100px;
}

.footer-bot {
  width: 60px;
  float: right;
}

.footer-bot .img-sc {
  width: 50px;
  height: 50px;
  margin: 0;
  float: right;
  padding: 0px 10px 0px 0px;
}

.footer-bot .img-gh {
  width: 50px;
  height: 50px;
  margin: 0;
  float: right;
  padding: 0px 10px 0px 0px;
}

.footer-bot .img-email {
  width: 50px;
  height: 50x;
  margin: 0;
  float: right;
  padding: 0px 10px 0px 0px;
}

.clicker-image2 {
  width: 100%;
  height: 90px;
  background-image: url('../img/logo2.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100px 100px;
  display: table;
  cursor: pointer;
}

.clicker-image2:hover {
  transition: .3s ease;

}

/* footer web */

@media only screen and (min-width:1000px) {
  #footer {
    bottom: 0;
    width: 100%;
  }

  #wrapper-sm {
    display: flex;
    justify-content: center;
    background-color: rgb(255, 255, 255);
    padding-bottom: 40px;
  }

  .footer-mid {
    position: absolute;
  }

  .footer-mid ul {
    padding: 22px 0px 0px 0px;
  }

  .footer-mid ul h3 {
    width: 375px;
    padding: 0px;
    font-family: SourceHanSerifSCExtraLight;
    text-align: center;
    letter-spacing: 2px;
    color: rgb(71, 71, 71);
    line-height: 10px;
    font-size: 0px;
    padding: 0px 0px 0px 0px;
  }

  .footer-end ul h2 {
    text-align: right;
    width: 100px;
    padding: 0px 0px 0px 0px;
  }

  .footer-top h1 {
    color: rgb(255, 255, 255);
    width: 375px;
    line-height: 50px;
    padding: 0;
  }

  .footer-end {
    padding-left: 0px;
    padding-top: 0px;
    padding-right: 65px;
    -webkit-transition: 1s;
    transition: 1s;
    position: absolute;
    visibility: hidden;
  }

  .footer-bot {
    -webkit-transition: 1s;
    transition: 1s;
    width: 30px;
    padding-left: 0px;
    padding-top: 0px;
    position: absolute;
    visibility: hidden;
  }

  .footer-bot .img-sc {
    position: inherit;
    padding: 0px 0px 0px 0px;
  }

  .footer-bot .img-gh {
    position: relative;
    padding: 0px 0px 0px 0px;
  }

  .footer-bot .img-email {
    position: relative;
    padding: 0px 0px 0px 0px;
  }

  .img-sc:hover,
  .img-email:hover,
  .img-gh:hover {
    opacity: 1;
    -webkit-animation: flash 1s;
    animation: flash 1s;
  }

  .footer-bot {
    width: 50px;
  }
}

/* contact form */

.wrapper-pro3 {
  padding: 0;
}

.second2 {
  order: 1;
}

.background {
  padding-top: 200px;
  order: 2;
}

@media only screen and (min-width:1000px) {
  .contact-img {
    height: 861px;
    width: 807px;
    display: block;
    margin: auto;
  }
}

.background {
  padding-top: 20px;
}

@media only screen and (min-width:1000px) {
  .background {
    padding-top: 170px;
    display: flex;
    height: 100%;
    padding-bottom: 46px;
  }
}

.container {
  flex: 0 1 700px;
  margin: auto;
  padding: 10px;
  padding-bottom: 148px;
}

.screen {
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  letter-spacing: 1.4px;
  position: relative;
  background: #ffffff;
  border-radius: 15px;
}

.screen:after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 20px;
  right: 20px;
  bottom: 0;
  border-radius: 15px;
  box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
  z-index: -1;
}

.screen-body {
  display: flex;
  border-radius: 15px;
  box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
  z-index: -1;
}

.screen-body-item {

  flex: 1;
  padding: 50px;
}

.screen-body-item.left {
  display: flex;
  flex-direction: column;
}

.app-title {
  display: flex;
  flex-direction: column;
  position: relative;
  color: #e43f55;
  font-size: 17px;
}

.app-title:after {

  content: '';
  display: block;
  position: absolute;
  left: 0;
  bottom: -10px;
  width: 25px;
  height: 4px;
  background: #e43f55;
  ;
}

.app-contact {
  margin-top: auto;
  font-weight: 700;
  font-size: 7px;
  color: #888;
}

.app-form-group {
  margin-bottom: 15px;
}

.app-form-group.message {
  margin-top: 40px;
}

.app-form-group.buttons {
  margin-bottom: 0;
  text-align: right;
}

.app-form-control {
  font-weight: 700;
  width: 100%;
  padding: 10px 0;
  background: none;
  border: none;
  border-bottom: 1px solid #666;
  color: rgb(0, 0, 0);
  font-size: 14px;
  outline: none;
  transition: border-color .2s;
}

.app-form-control::placeholder {
  color: #666;
}

.app-form-control:focus {
  border-bottom-color: #ddd;
}
/* ... */

